@@ -109,7 +109,6 @@ if [ ${TASK} == "python_test" ]; then
 fi
 
 if [ ${TASK} == "scala_test" ]; then
-    export MAVEN_OPTS="-Xmx256m -XX:MaxPermSize=128m"
     if [ ${TRAVIS_OS_NAME} == "osx" ]; then
         LIB_GOMP_PATH=`find /usr/local/lib -name libgomp.dylib | grep -v i386 | head -n1`
         ln -sf $LIB_GOMP_PATH /usr/local/lib/libgomp.dylib
